<resources>
    //Bài tập 1
    <string name="app_name">RelativeLayout30032020</string>
    <string name="textView1_name">Red</string>
    <string name="textView2_name">Green</string>
    <string name="textView3_name">Blue</string>
    <string name="textView4_name">Orange</string>
    <string name="textView5_name">Gray</string>
    <string name="textView6_name">Pink</string>

    //Bài tập 2
    <string name="textView7_name">1</string>
    <string name="textView8_name">2</string>
    <string name="textView9_name">3</string>
    <string name="textView10_name">4</string>
    <string name="textView11_name">5</string>
    <string name="textView12_name">6</string>
    <string name="textView13_name">7</string>

    //Bài tập 3
    <string name="textView14_name">Top Content Here</string>
    <string name="textView15_name">First</string>
    <string name="textView16_name">Second</string>
    <string name="textView17_name">Three</string>
    <string name="textView18_name">Bottom Content Here</string>

    //Bài tập 4
    <string name="textView19_name">1</string>
    <string name="textView20_name">2</string>
    <string name="textView21_name">3</string>
    <string name="textView22_name">4</string>
    <string name="textView23_name">5</string>
    <string name="textView24_name">6</string>
    <string name="textView25_name">7</string>
    <string name="textView26_name">8</string>
    <string name="textView27_name">9</string>
</resources>
