<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/text1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#F5082C"
        android:text="@string/textView1_name"
        android:textColor="#FFF"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/text2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text1"
        android:background="#37D244"
        android:text="@string/textView2_name"
        android:textColor="#FFF"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/text3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text2"
        android:background="#3387F5"
        android:text="@string/textView3_name"
        android:textColor="#FFF"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/text4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/text3"
        android:background="#D6A535"
        android:text="@string/textView4_name"
        android:textColor="#FFF"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/text5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/text4"
        android:background="#959294"
        android:text="@string/textView5_name"
        android:textColor="#FFF"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/text6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text5"
        android:background="#DA23BD"
        android:text="@string/textView6_name"
        android:textColor="#FFF"
        android:textSize="20sp" />


</RelativeLayout>