<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/text_box1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:background="#FF2301"
        android:paddingStart="40dp"
        android:paddingEnd="40dp"
        android:text="@string/textView19_name"
        android:textColor="#000000"
        android:textSize="35sp" />

    <TextView
        android:id="@+id/text_box2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/text_box1"
        android:layout_toStartOf="@+id/text_box1"
        android:background="#2A9543"
        android:paddingStart="40dp"
        android:paddingEnd="40dp"
        android:text="@string/textView20_name"
        android:textColor="#000000"
        android:textSize="35sp" />

    <TextView
        android:id="@+id/text_box3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/text_box1"
        android:layout_toStartOf="@id/text_box1"
        android:background="#B7AB33"
        android:paddingStart="40dp"
        android:paddingEnd="40dp"
        android:text="@string/textView21_name"
        android:textColor="#000000"
        android:textSize="35sp" />

    <TextView
        android:id="@+id/text_box4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/text_box1"
        android:layout_toEndOf="@id/text_box1"
        android:background="#96146C"
        android:paddingStart="40dp"
        android:paddingEnd="40dp"
        android:text="@string/textView22_name"
        android:textColor="#000000"
        android:textSize="35sp" />

    <TextView
        android:id="@+id/text_box5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/text_box1"
        android:layout_toEndOf="@id/text_box1"
        android:background="#90625C"
        android:paddingStart="40dp"
        android:paddingEnd="40dp"
        android:text="@string/textView23_name"
        android:textColor="#000000"
        android:textSize="35sp" />

    <TextView
        android:id="@+id/text_box6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#946A30"
        android:paddingStart="40dp"
        android:paddingEnd="40dp"
        android:text="@string/textView24_name"
        android:textColor="#000000"
        android:textSize="35sp" />

    <TextView
        android:id="@+id/text_box7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:background="#47DAAE"
        android:paddingStart="40dp"
        android:paddingEnd="40dp"
        android:text="@string/textView25_name"
        android:textColor="#000000"
        android:textSize="35sp"
        tools:ignore="RelativeOverlap" />

    <TextView
        android:id="@+id/text_box8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="#224D82"
        android:paddingStart="40dp"
        android:paddingEnd="40dp"
        android:text="@string/textView26_name"
        android:textColor="#000000"
        android:textSize="35sp" />

    <TextView
        android:id="@+id/text_box9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:background="#EB992B"
        android:paddingStart="40dp"
        android:paddingEnd="40dp"
        android:text="@string/textView27_name"
        android:textColor="#000000"
        android:textSize="35sp"
        tools:ignore="RelativeOverlap" />

</RelativeLayout>